--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bulma": "^0.9.4",
+    "json-server": "^0.17.2",
     "prompt-sync": "^4.2.0",
     "serve": "^13.0.4"
   }
