--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bulma": "^0.9.4",
     "json-server": "^0.17.2",
     "prompt-sync": "^4.2.0",
+    "react-router-dom": "^6.10.0",
     "serve": "^13.0.4"
   }
 }
