--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "bulma": "^0.9.4",
     "json-server": "^0.17.2",
     "prompt-sync": "^4.2.0",
